--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,6 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,6 +20,14 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.button {
+  background-color: #61dafb;
+  padding:5px;
+  border-radius: 2px;
+  width: 100px;
+  color: #fff;
 }
 
 @keyframes App-logo-spin {
