--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.App {
-  text-align: center;
-}
-
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -22,16 +18,22 @@
   
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
   text-align: left;
+}
+
+section {
+  width: 100%;
+}
+
+article {
+  padding: 10px;
 }
 
 aside {
   min-width: 200px;
-}
-
-.App-link {
-  color: #61dafb;
+  padding: 10px;
+  background-color: #ccc;
 }
 
 .button {
@@ -58,6 +60,20 @@ aside {
 
 .message {
   padding:5px;
+}
+
+nav {
+  background-color: #282c34;
+  width: 100%;
+  padding-left: 10px;
+}
+
+.tab {
+  background-color: #fff;
+  width: 100px; 
+  padding: 10px;
+  border-radius: 2px 2px 0 0;
+  cursor: pointer;
 }
 
 @keyframes App-logo-spin {
