--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+html, body, #root
+{ 
+  height: 100%;
+}
+
+.App {
+  display: flex;
+  flex-flow: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -12,10 +24,11 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding:10px;
 }
 
 .content {
-  
+  flex: 1 1 auto;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -70,15 +83,24 @@ aside {
 nav {
   background-color: #282c34;
   width: 100%;
-  padding-left: 10px;
+  display: flex;
+  flex-flow: row;
+  align-items: flex-start;
+  justify-content: space-around;
 }
 
 .tab {
-  background-color: #fff;
   width: 100px; 
   padding: 10px;
   border-radius: 2px 2px 0 0;
   cursor: pointer;
+  color:#fff;
+
+}
+
+.tab.active {
+  background-color: #fff;
+  color:#000;
 }
 
 @keyframes App-logo-spin {
