--- a/src/App.css
+++ b/src/App.css
@@ -86,8 +86,9 @@ nav {
   width: 100%;
   display: flex;
   flex-flow: row;
-  align-items: flex-start;
-  justify-content: space-around;
+  align-items: space-between;
+  justify-content: flex-start;
+  padding: 0 10px;
 }
 
 .tab {
