--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,11 @@ aside {
   margin-right: 10px;
 }
 
+.disabled .button {
+  background-color: #ccc;
+  color:#000;
+}
+
 .button:active {
   
   background-color: #99dafb;
@@ -97,9 +102,7 @@ nav {
   width: 100%;
   display: flex;
   flex-flow: row;
-  align-items: space-between;
   justify-content: flex-start;
-  padding: 0 10px;
 }
 
 .tab {
@@ -108,6 +111,7 @@ nav {
   border-radius: 2px 2px 0 0;
   cursor: pointer;
   color:#fff;
+  margin-left: 10px;
 
 }
 
